syntax = "proto3";
package pb;

option go_package = "/pb";

service ExpService {
  rpc AddData(AddDataParameter) returns (AddDataResponse);
  rpc QueryData(QueryDataParameter) returns (QueryDataResponse);
}

message AddDataParameter {
  bytes data = 1;
}

message AddDataResponse {
  string id = 1;
  bytes data = 2;
}

message QueryDataParameter {
  int32 id = 1;
}

message QueryDataResponse {
  int32 id = 1;
  bytes data = 2;
}